# SLiCE

./: .gitignore  CHANGELOG.md  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: basic_usage.py  batch_evaluation.py  custom_weights.py  sample_data_usage.py
slice/: SYNTAX.py  SchemaLineageEvaluator.py  __init__.py  cli.py  constants.py  eval.py  string_parsers.py
slice/data/: __init__.py  loaders.py
slice/data/datasets/: Index.csv  generated.json  human_labeled.json  index.csv
tests/: __init__.py  test_cli.py  test_data_loaders.py  test_eval.py  test_evaluator.py  test_schema_lineage_evaluator.py  test_string_parsers.py
